--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Smavy LMS backend",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
+    "start": "node index",
     "dev": "nodemon server"
   },
   "author": "",
@@ -22,6 +22,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "lint-staged": "^15.0.2",
+    "nodemon": "^3.0.1",
+    "prettier": "3.0.3"
   }
 }
