--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Smavy LMS backend",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
