--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,10 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "lint-staged": "^15.0.2",
     "nodemon": "^3.0.1",
     "prettier": "3.0.3"
