--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
