--- a/server/package.json
+++ b/server/package.json
@@ -34,5 +34,8 @@
     "lint-staged": "^15.0.2",
     "nodemon": "^3.0.1",
     "prettier": "3.0.3"
-  }
+  },
+  "engines": {
+    "node": ">=11.14.0"
+}
 }
