--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "swagger-autogen": "node ./docs/swagger.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   },
@@ -33,9 +36,10 @@
     "eslint-plugin-prettier": "^5.0.1",
     "lint-staged": "^15.0.2",
     "nodemon": "^3.0.1",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "swagger-autogen": "^2.23.7"
   },
   "engines": {
     "node": ">=11.14.0"
-}
+  }
 }
