--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^9.0.4",
